--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-
-    <div style="margin-top: 20px;">
+    <div style="margin-top: 20px; display: flex; justify-content: center; gap: 10px">
         <button id="btn_success">Success</button>
+        <button id="btn_error">Error</button>
     </div>
-
     <script src="./toast.js"></script>
 </body>
 </html>
