feat: add variants info and warning notifications

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div style="margin-top: 20px; display: flex; justify-content: center; gap: 10px">
         <button id="btn_success">Success</button>
         <button id="btn_error">Error</button>
+        <button id="btn_info">Info</button>
+        <button id="btn_warning">Warning</button>
     </div>
     <script src="./toast.js"></script>
 </body>
