--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="btn_error">Error</button>
         <button id="btn_info">Info</button>
         <button id="btn_warning">Warning</button>
+        <button id="btn_neutral">Neutral</button>
     </div>
     <script src="./toast.js"></script>
 </body>
