feat: add dataset value and notifications variants

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div style="margin-top: 20px; display: flex; justify-content: center; gap: 10px">
-        <button id="btn_success">Success</button>
-        <button id="btn_error">Error</button>
-        <button id="btn_info">Info</button>
-        <button id="btn_warning">Warning</button>
-        <button id="btn_neutral">Neutral</button>
+        <button id="btn_success" class="button-action" data-variant="variant-success">Success</button>
+        <button id="btn_error" class="button-action" data-variant="variant-error">Error</button>
+        <button id="btn_info" class="button-action" data-variant="variant-info">Info</button>
+        <button id="btn_warning" class="button-action" data-variant="variant-warning">Warning</button>
+        <button id="btn_neutral" class="button-action" data-variant="variant-neutral">Neutral</button>
     </div>
     <script src="./toast.js"></script>
 </body>
